--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ Box2D==2.3.10
 cachetools==4.1.0
 certifi==2020.4.5.1
 chardet==3.0.4
+click==7.1.2
 cloudpickle==1.3.0
 cycler==0.10.0
 decorator==4.4.2
@@ -81,6 +82,7 @@ termcolor==1.1.0
 terminado==0.8.3
 testpath==0.4.4
 tornado==6.0.4
+tqdm==4.46.0
 traitlets==4.3.3
 urllib3==1.25.9
 wcwidth==0.1.9
